--- a/docs/dxp/latest/en/process-automation/workflow/developer-guide/creating-a-workflow-instance-tracker/resources/liferay-f2m9.zip/f2m9-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/docs/dxp/latest/en/process-automation/workflow/developer-guide/creating-a-workflow-instance-tracker/resources/liferay-f2m9.zip/f2m9-web/src/main/resources/META-INF/resources/css/main.scss
@@ -3,58 +3,9 @@
 	justify-content: center !important;
 
 	.modal-body {
+		width: 100% !important;
+		height: 100% !important;
 		overflow: hidden !important;
 		padding: 0 !important;
-	}
-}
-
-@media screen and (min-width: 1700px) {
-	.modal-full-screen {
-		.modal-content,
-		.modal-body {
-			width: 1500px !important;
-		}
-
-		.modal-body {
-			height: 676px !important;
-		}
-
-		.modal-content {
-			height: 740px !important;
-		}
-	}
-}
-
-@media screen and (min-width: 1280px) and (max-width: 1699px) {
-	.modal-full-screen {
-		.modal-content,
-		.modal-body {
-			width: 1050px !important;
-		}
-
-		.modal-body {
-			height: 590px !important;
-		}
-
-		.modal-content {
-			height: 654px !important;
-		}
-	}
-}
-
-@media screen and (max-width: 1279px) {
-	.modal-full-screen {
-		.modal-content,
-		.modal-body {
-			width: 700px !important;
-		}
-
-		.modal-body {
-			height: 573px !important;
-		}
-
-		.modal-content {
-			height: 637px !important;
-		}
 	}
 }
